200 OK test for endepunktet /generate/ med mockK, endret en del dependencies i build gradle